syntax = "proto3";

option java_outer_classname = "ClientMsgContainer";
option java_package = "com.crsardar.handson.java.protobuff.client";

message ClientMsg {

    string time = 1;
    string clientName = 2;
    string message = 3;
}